--- a/.prettierrc
+++ b/.prettierrc
@@ -1,9 +1,17 @@
 {
-  "plugins": [],
+  "plugins": ["prettier-plugin-svelte"],
   "arrowParens": "avoid",
   "jsxSingleQuote": false,
   "quoteProps": "consistent",
   "semi": false,
   "singleQuote": true,
-  "trailingComma": "none"
+  "trailingComma": "none",
+  "overrides": [
+    {
+      "files": "*.svelte",
+      "options": {
+        "parser": "svelte"
+      }
+    }
+  ]
 }
