--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "postcss": "^8.4.49",
     "postcss-nesting": "^13.0.1",
     "prettier": "^3.4.2",
+    "prettier-plugin-svelte": "^3.3.2",
     "stylelint": "^16.12.0",
     "stylelint-use-logical": "^2.1.2",
     "svelte": "^5.15.0",
